[package]
name = "dsmr-prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
crc16 = "0.4.0"
chrono = "0.4.19"
prometheus_exporter = {version="0.8.4", default-features=false}
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
clap = {version="3.2", features=["derive"]}
clap-verbosity-flag = "1.0"
